# job-profiles-ai

./: .env.sample  .gitignore  README.md  learning.md  pyproject.toml
jobstore_ai/analyze_data_set/: main.py
jobstore_ai/data/: outputs.txt
jobstore_ai/llm/: main.py
jobstore_ai/scraping/: main.py
jobstore_ai/scripts/: clean_data.py  scrape_main.py
jobstore_ai/test_lora/: main.py
jobstore_ai/util/: main.py
lora_job_adapter/: adapter_config.json
scripts/: __init__.py
scripts/cleaning/: main.py
scripts/llm/: main.py
scripts/scripts/: clean_data.py  scrape_main.py
scripts/test_basic_model/: main.py
scripts/test_lora/: main.py
