[project]
name = "jobstore_ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)",
    "peft (>=0.14.0,<0.15.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "bitsandbytes (>=0.43.0)",
    "torch (>=2.6.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "job_scraper.scripts.scrape_main:main_scraper"
[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
